--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": "fliplet",
   "globals": {
-    "SwipeSaveList": true,
-    "ui": true
+    "Fliplet": "readonly",
+    "SwipeSaveList": "readonly",
+    "ui": "readonly"
   }
 }
